<resources>
    <string name="app_name">MovieLaunchApp</string>
    <string name="title_activity_home_page">MovieLaunchApp</string>
    <string name="navigation_drawer_open">Open side bar</string>
    <string name="navigation_drawer_close">Close side bar</string>
    <string name="nav_header_title">MovieLaunchApp</string>
    <string name="nav_header_subtitle">Version 0.01 Pre-Alpha</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>


    <!-- Strings for left side navigation drawer, first group -->

    <string name="drawer_home">Home</string>
    <string name="drawer_movies">Top Movies</string>
    <string name="drawer_search">Search for movie</string>
    <string name="drawer_comics">Comics</string>
    <string name="drawer_list">To Watch List</string>

    <!-- Strings for left side navigation drawer, second group -->

    <string name="drawer_group_name">Debug</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_about">About</string>


</resources>
