<?xml version="1.0" encoding="utf-8"?>

<!-- Menu file for the navigation drawer"-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- This is the Menu -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_pages"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/drawer_movies" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_pages"
            android:title="@string/drawer_search" />

        <item
            android:id="@+id/nav_comics"
            android:icon="@drawable/ic_pages"
            android:title="@string/drawer_comics" />

        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_pages"
            android:title="@string/drawer_music" />

    </group>

    <item android:title="@string/drawer_group_name">

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_pages"
            android:title="@string/drawer_help" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_pages"
            android:title="@string/drawer_about" />

        <menu>

        </menu>
    </item>

</menu>
